<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/toolsViewRoot"
    android:background="@color/colorPrimaryDark">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/travelContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@id/travelGuide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </android.support.constraint.ConstraintLayout>

    <Space
        android:id="@+id/travelGuide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/mergeContainer" />

    <android.support.constraint.Guideline
        android:id="@+id/propertyGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/mergeContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_top_20_rect_white"
        android:clipChildren="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/toolsContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="12dp"
            android:clipChildren="false"
            app:layoutManager="android.support.v7.widget.GridLayoutManager"
            app:layout_constraintBottom_toTopOf="@id/functionContainer"
            app:layout_constraintDimensionRatio="w, 16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:spanCount="4"
            tools:itemCount="100"
            tools:listitem="@layout/item_tool" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/functionContainer"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:layout_margin="12dp"
            android:background="@drawable/round_rect_gray"
            android:clipChildren="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <android.support.constraint.ConstraintLayout
                android:id="@+id/shopContainer"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.3">

                <TextView
                    android:id="@+id/shop"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:drawableStart="@mipmap/icon_shop"
                    android:drawableLeft="@mipmap/icon_shop"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    android:text="@string/shop"
                    android:textColor="#303030"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>

            <LinearLayout
                android:id="@+id/quick"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/round_rect_orange"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/speedupContainer"
                app:layout_constraintStart_toEndOf="@+id/shopContainer"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="invisible">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-40dp">

                    <ImageView
                        android:id="@+id/levelImage"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        tools:src="@mipmap/ic_launcher_round"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/levelText"
                        android:layout_width="28dp"
                        android:layout_height="20dp"
                        android:background="@drawable/round_rect_white"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textColor="@android:color/holo_orange_dark"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />

                </android.support.constraint.ConstraintLayout>

                <TextView
                    android:id="@+id/quickBuy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@mipmap/icon_gold_up"
                    android:drawableLeft="@mipmap/icon_gold_up"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    android:text="@string/quick_buy"
                    android:textColor="@android:color/white" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/recycleContainer"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/round_rect_gray"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/speedupContainer"
                app:layout_constraintStart_toEndOf="@+id/shopContainer"
                app:layout_constraintTop_toTopOf="parent"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/recycleImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="-40dp"
                    android:src="@mipmap/icon_garbage"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/recycleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/recycle_property"
                    android:textColor="#686566" />

            </LinearLayout>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/speedupContainer"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.3">

                <TextView
                    android:id="@+id/speedup"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:drawableStart="@mipmap/icon_speed_up"
                    android:drawableLeft="@mipmap/icon_speed_up"
                    android:drawablePadding="4dp"
                    android:gravity="center"
                    android:text="@string/speedup"
                    android:textColor="#303030"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </android.support.constraint.ConstraintLayout>
        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/moreContainer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:translationX="300dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

        <ImageView
            android:id="@+id/towardsRight"
            tools:visibility="visible"
            android:visibility="gone"
            android:padding="4dp"
            android:src="@mipmap/towards_right"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/towardsLeft"
            tools:visibility="visible"
            android:visibility="gone"
            android:padding="4dp"
            android:src="@mipmap/towards_left"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="ContentDescription" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/propertyContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_property"
        app:layout_constraintBottom_toBottomOf="@id/travelGuide"
        app:layout_constraintEnd_toEndOf="@id/propertyGuide"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:src="@mipmap/icon_gold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/iconSub"
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:src="@mipmap/icon_lighting"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/icon"
            app:layout_constraintEnd_toEndOf="@id/icon"
            tools:ignore="ContentDescription"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/property"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/app_name"
            android:textColor="#F06700"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/icon"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/speed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="2dp"
            android:text="@string/app_name"
            android:textColor="#3B3B3B"
            android:textSize="10sp"
            app:layout_constraintStart_toEndOf="@id/icon"
            app:layout_constraintTop_toBottomOf="@id/property"
            tools:ignore="SmallSp" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
